--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: "Manrope", sans-serif;
+}
+body{
+    background-color: #101010;
+}
+.paycelint_container{
+    margin: 0 auto;
+    max-width: 1280px;
 }
