--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a{
     font-size: 24px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    text-align: justify;
+    text-align: left;
     color: #fff;
 }
 
