--- a/media.css
+++ b/media.css
@@ -30,7 +30,8 @@
 }
 @media(max-width: 800px){
     .paycelint__banner__title{
-        padding-top: 180px;
+        padding-top: 160px;
+        font-size: 14vw;
     }
     .paycelint_header__menu{
         display: none;
